<resources>
    <string name="app_name">BSUIR Schedule</string>
    <string name="course">курс</string>
    <string name="week">неделя</string>
    <string name="week_short">%d нед</string>
    <string name="exam">Экзамен</string>
    <string name="pretest">Зачет</string>
    <string name="tomorrow">Завтра</string>
    <string name="today">Сегодня</string>
    <string name="yesterday">Вчера</string>
    <string name="consultation">Консультация</string>
    <string name="lecture">Лекция</string>
    <string name="practise">Практика</string>
    <string name="found">найдено %s</string>
    <string name="laboratory">Лабораторная</string>
    <string name="unknown">Неизвестно</string>
    <string name="widget_successfully_added">Виджет успешно добавлен</string>
    <string name="info_dialog_title">Внимание</string>
    <string name="update">Обновить</string>
    <string name="okay">Понятно</string>
    <string name="and">и</string>
    <string name="after">через</string>
    <string name="delete">Удалить</string>
    <string name="employee">Преподаватель</string>
    <string name="group">Группа</string>
    <string name="short_hour">%d ч</string>
    <string name="short_minute">%d мин</string>
    <string name="monday">Понедельник</string>
    <string name="tuesday">Вторник</string>
    <string name="wednesday">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="friday">Пятница</string>
    <string name="saturday">Суббота</string>
    <string name="sunday">Воскресенье</string>
    <string name="hello_name">Здравствуйте, %s!\n</string>
    <string name="alert_reset_settings_title">Вы уверены, что хотите сбросить настройки?</string>
    <string name="schedule_updated_notification">Обновлено %s</string>
    <string name="group_schedule_updated_notification">Группа %s</string>
    <string name="employee_schedule_updated_notification">Преподаватель %s</string>
    <string name="schedule_updated">Расписание обновлено</string>
    <string name="group_schedule_updated">Обновлено расписание группы</string>
    <string name="employee_schedule_updated">Обновлено расписание преподавателя</string>
    <string name="new_notifications_amount">%d новых уведомлений.</string>
    <string name="last_update">Было обновлено %s</string>
    <string name="subject_now">Сейчас %s</string>
    <string name="subject_status_now">Сейчас %s</string>
    <string name="subject_status_now_in">Сейчас %s в %s</string>
    <string name="subject_status_today">%s до %s (%s)</string>
    <string name="subject_status_today_no_audience">%s до %s</string>
    <string name="subject_status_tomorrow">Завтра к %s (%s)</string>
    <string name="subject_status_days_left">Через %s %s в %s</string>
    <string name="subject_next_time_undefined">Этого предмета больше не будет</string>
    <string name="subject_next_time">Cлед. %s будет %s</string>
    <string name="subject_next_time_current_week">%s будет в этой же неделе (%s)</string>
    <string name="subject_next_time_left_days">через %s</string>
    <string name="subject_next_time_in_week_day">в %s</string>
    <string name="no_subject_now">Сейчас нет занятий</string>
    <string name="audience_now">в %s</string>
    <string name="add">Добавить</string>
    <string name="selected_subgroup">Выбрана %d подгруппа</string>
    <string name="selected_all_subgroups">Выбраны все подгруппы</string>
    <string name="schedule_empty_date_period">Занятий нет</string>
    <string name="schedule_date_period">Расписание с %s по %s</string>
    <string name="previous_schedule_date_period">Пред. семестр с %s по %s</string>
    <string name="exams_date_period">Экзамены с %s по %s</string>
    <string name="exams_empty_date_period">Экзаменов нет</string>
    <string name="more">ещё</string>
    <string name="session">Сессия</string>
    <string name="actual_semester">Семестр</string>
    <string name="previous_semester">Предыдущий семестр</string>
    <string name="cancel">Назад</string>
    <string name="delete_schedule">Удалить расписание  «%s»?</string>
    <string name="delete_subject">Удалить одно занятие по %s?</string>
    <string name="agree">Да</string>
    <string name="active_schedule_no_departments">Кафедра отсутствует</string>
    <string name="upload_schedule_dialog_title">Хотите посмотреть на расписание %s?</string>
    <string name="upload_schedule_dialog_title_holder">Хотите посмотреть на это расписание?</string>
    <string name="upload_schedule_dialog_caption">Если это расписание не было загружено Вами, оно загрузится автоматически</string>
    <string name="delete_schedule_dialog_title">Вы уверены, что хотите удалить расписание?</string>
    <string name="delete_schedule_dialog_caption">Настройки расписания так же будут удалены</string>
    <string name="delete_subject_dialog_title">Вы уверены, что хотите удалить занятие?</string>
    <string name="delete_subject_dialog_caption">Вернуть занятие можно будет лишь обновив расписание!</string>
    <string name="reset_schedule_settings">Настройки сброшены</string>
    <string name="save_schedule_settings">Настройки сохранены</string>
    <string name="cd_schedule_list" translatable="false">Schedule list</string>
    <string name="cd_no_content" translatable="false">no content</string>
    <string name="cd_subject_type" translatable="false">subject type</string>
    <string name="cd_exams" translatable="false">exams</string>
    <string name="cd_schedule_subgroup" translatable="false">Schedule Subgroup</string>
    <string name="cd_last_update" translatable="false">last update</string>
    <string name="cd_filter" translatable="false">filter asc or desc</string>
    <string name="cd_filter_search" translatable="false">search input</string>
    <string name="cd_logo_icon" translatable="false">logo icon</string>
    <string name="cd_error_icon" translatable="false">error icon</string>
    <string name="error_open_gmail">Не удалось открыть приложение Gmail</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="test_schedule_title" translatable="false">Степанова Татьяна Сергеевна</string>
    <string name="test_schedule_subtitle" translatable="false">к.ф.-м.н. доцент</string>
    <string name="test_schedule_date" translatable="false">Понедельник</string>
    <string name="test_schedule_lessons_amount" translatable="false">4 пары</string>
    <string name="test_schedule_change_amount" translatable="false">2 изменения</string>
    <string name="about_title">Чего вы могли не знать?</string>
    <string name="schedule_title_placeholder">Введите что угодно</string>
    <string name="popup_edit">Изменить</string>
    <string name="popup_deactivate">Не пойду</string>
    <string name="popup_activate">Пойду</string>
    <string name="popup_delete">Удалить</string>
    <string name="about_search_title">Поиск расписаний</string>
    <string name="about_search_text">Поиск работает по всем ключевым словам, относящиеся к расписанию.\n\nГруппы можно искать по полному названию или аббревиатуре факультета и специальности:
        Запрос “ксис поит” выдаст все группы относящиеся к данному факультету и специальности.\n\nЗапрос, состоящий из одной цифры, выдаст все группы соответствующего курса.\n\nТак же и с преподавателями. Можно искать, по кафедре, научной степени (“к.т.н.”, “доцент”, “профессор”, и т.д).</string>
    <string name="about_rename_title">Переименование расписаний</string>
    <string name="about_rename_text">Расписание можно пометить своим названием.\n\nНовое название будет помечено в скобках, после оригинального названия расписания.\nНапример: “010101 (Сосед по комнате)“\n\nПереименовывается так же и в глобальном списке всех расписаний, так что, пометив расписание текстом “Сосед”, его можно будет найти поиском в разделе “Все расписания”.\n\nЧтобы переименовать расписание, перейдите в раздел “Мои расписания”, а затем долгим нажатием или нажатием на три точки расписания, выберите “Переименовать”.</string>
    <string name="about_subject_options_title">Опции занятия</string>
    <string name="about_subject_options_text">Занятие можно изменить, удалить и пометить, как игнорируемое.\n\nЕсли вы не планируете посещать занятие, его можно пометить, как игнорируемое. В таком случае, приложение не будет его учитывать и упоминать в сообщении на главном экране.\n\nЧтобы добраться до этих опций, воспользуйтесь долгим нажатием на занятие в расписании.</string>
    <string name="about_schedule_settings_title">Настройки расписания</string>
    <string name="about_schedule_settings_text">Автообновление, изменение вида, показ прошедших дней и отображение пустых дней.\n\nПриложение ежедневно проверяет каждое скачанное вами расписание на обновление. И в случае обновлении, уведомляет вас об этом и показывает, что именно было изменено в разделе (История обновлений).\n\nЕсть два вида расписаний, короткий и полный. Отличие в том, что в занятиях не отображается подробная информация о преподавателе, который будет вести это занятие или о группах, которые будут его посещать.\n\nУ преподавателей бывают много пустых дней, которые могут занимать лишнее пространство. В таком случае, можно скрыть пустые дни в расписании.\n\nЧтобы изменить настройки расписания, перейдите на главный экран, вызовите контекстное меню, нажав на три точки, а затем выберите “Настройки”.</string>
    <string name="about_language_title">Приложение поддерживает 4 языка</string>
    <string name="about_language_text">Поддерживаются русский, английский, белорусский и китайский язык.\n\nНужный язык автоматически подстроится под вашу операционную систему на устройстве.\n\nНазвания занятий, кафедр, факультетов, специальностей и имен преподавателей всегда остаётся на русском.</string>
    <string name="settings_auto_update">Автоматическое обновление</string>
    <string name="settings_auto_update_caption">При появлений обновлений, расписание автоматически обновится</string>
    <string name="settings_show_empty_day">Показывать пустые дни</string>
    <string name="settings_show_empty_day_caption">Дни, в которых нет занятий, можно скрыть, чтобы получить более информативное расписание</string>
    <string name="settings_show_short_version">Показывать в коротком виде</string>
    <string name="settings_show_short_version_caption">Дополнительная информация будет скрыта и занятия будут занимать меньше места</string>
    <string name="settings_show_past_days">Показывать прошедшие дни</string>
    <string name="settings_show_past_days_caption">Вы можете указать количество прошедших дней, чтобы видеть их на расписании</string>
    <string name="settings_auto_update_title">Автообновление</string>
    <string name="settings_past_days_title">Прошедшие дни</string>
    <string name="settings_empty_days_title">Пустые дни</string>
    <string name="settings_short_schedule_title">Вид занятий</string>
    <string name="schedule_settings_schedule_past_days_hint_text">Сколько прошедших дней показывать?</string>
    <string name="reset">Сбросить</string>
    <string name="save">Сохранить</string>
    <string name="rename_schedule_dialog_caption">Новое название будет в помечено скобках</string>
    <string name="rename_schedule_dialog_title">Введите название</string>
    <string name="done">Готово</string>
    <string name="delete_subject_dialog_all">Все занятия по %s</string>
    <string name="delete_subject_dialog_type">Все (%s) по %s</string>
    <string name="delete_subject_dialog_period">Все занятия по %s, (%s), %s</string>
    <string name="delete_subject_dialog_subgroup">Только для %d подгруппы</string>
    <string name="also_delete">Удалить так же:</string>
    <string name="schedule_header_menu_update">Обновить</string>
    <string name="schedule_header_menu_settings">Настройки</string>
    <string name="schedule_header_menu_share">Поделиться</string>
    <string name="schedule_header_menu_more">Дополнительно</string>
    <string name="schedule_header_menu_delete">Удалить</string>
</resources>