<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.bsuir.bsuirschedule.presentation.views.CheckBoxView
        android:id="@+id/autoUpdateCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkbox_caption="@string/settings_auto_update"
        app:checkbox_description="@string/settings_auto_update_caption"
        app:checkbox_icon="@drawable/ic_schedule"
        app:checkbox_title="@string/settings_auto_update_title" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <com.bsuir.bsuirschedule.presentation.views.CheckBoxView
        android:id="@+id/shortScheduleCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkbox_caption="@string/settings_show_short_version"
        app:checkbox_description="@string/settings_show_short_version_caption"
        app:checkbox_icon="@drawable/ic_view"
        app:checkbox_title="@string/settings_short_schedule_title" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <com.bsuir.bsuirschedule.presentation.views.CheckBoxView
        android:id="@+id/pastDaysCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:translationZ="1dp"
        app:checkbox_caption="@string/settings_show_past_days"
        app:checkbox_description="@string/settings_show_past_days_caption"
        app:checkbox_icon="@drawable/ic_past"
        app:checkbox_title="@string/settings_past_days_title" />

    <LinearLayout
        android:id="@+id/pastDaysShowAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingHorizontal="10dp">

        <com.bsuir.bsuirschedule.presentation.views.EditTextView
            android:id="@+id/pastDaysAmountEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3"
            android:textSize="@dimen/font_medium_size"
            app:caption="@string/schedule_settings_schedule_past_days_hint_text" />

    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <com.bsuir.bsuirschedule.presentation.views.CheckBoxView
        android:id="@+id/emptyDaysCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkbox_caption="@string/settings_show_empty_day"
        app:checkbox_description="@string/settings_show_empty_day_caption"
        app:checkbox_icon="@drawable/ic_empty"
        app:checkbox_title="@string/settings_empty_days_title" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/resetButton"
            style="@style/Theme.BSUIRSchedule.Button.Hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/saveButton"
            style="@style/Theme.BSUIRSchedule.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>

