<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/primaryOnColor"
    tools:context=".presentation.fragments.AboutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:paddingVertical="12dp"
        android:paddingHorizontal="15dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/cancel_button"
            style="@style/Theme.BSUIRSchedule.ImageButton"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/cd_schedule_list" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:textColor="?attr/primaryTextColor"
            style="@style/Theme.BSUIRSchedule.TextView.Medium.Title"
            android:layout_weight="1" />

        <Space
            android:layout_width="35dp"
            android:layout_height="35dp" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <com.bsuir.bsuirschedule.presentation.views.AboutInfoView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:about_icon="@drawable/ic_search"
                app:about_title="@string/about_search_title"
                app:about_text="@string/about_search_text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.bsuir.bsuirschedule.presentation.views.AboutInfoView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:about_icon="@drawable/ic_rename"
                app:about_title="@string/about_rename_title"
                app:about_text="@string/about_rename_text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.bsuir.bsuirschedule.presentation.views.AboutInfoView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:about_icon="@drawable/ic_tune"
                app:about_title="@string/about_subject_options_title"
                app:about_text="@string/about_subject_options_text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.bsuir.bsuirschedule.presentation.views.AboutInfoView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:about_icon="@drawable/ic_settings"
                app:about_title="@string/about_schedule_settings_title"
                app:about_text="@string/about_schedule_settings_text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <com.bsuir.bsuirschedule.presentation.views.AboutInfoView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:about_icon="@drawable/ic_language"
                app:about_title="@string/about_language_title"
                app:about_text="@string/about_language_text" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>


