<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/title"
                style="@style/Theme.BSUIRSchedule.TextView.Medium.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/delete_subject_dialog_title" />

            <Space
                android:layout_width="0dp"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/Theme.BSUIRSchedule.TextView.Hint"
                android:text="@string/delete_subject_dialog_caption" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/secondaryColor"
            app:cardElevation="0dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:id="@+id/delete_subject_options"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.BSUIRSchedule.TextView.Medium"
                    android:paddingHorizontal="10dp"
                    android:text="@string/also_delete" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <Switch
                    android:id="@+id/delete_all_subjects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_subject_dialog_all"
                    style="@style/Theme.BSUIRSchedule.Checkbox"
                    android:checked="false" />

                <Switch
                    android:id="@+id/delete_all_subjects_subgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_subject_dialog_subgroup"
                    style="@style/Theme.BSUIRSchedule.Checkbox"
                    android:checked="true" />

                <Switch
                    android:id="@+id/delete_all_subjects_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_subject_dialog_type"
                    style="@style/Theme.BSUIRSchedule.Checkbox"
                    android:checked="false" />

                <Switch
                    android:id="@+id/delete_all_subjects_period"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_subject_dialog_period"
                    style="@style/Theme.BSUIRSchedule.Checkbox"
                    android:checked="false" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.BSUIRSchedule.Button"
                android:text="@string/cancel" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/agree_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.BSUIRSchedule.Button.Danger"
                android:text="@string/delete" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>


