<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_warning"
                android:contentDescription="@string/cd_error_icon" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/title"
                style="@style/Theme.BSUIRSchedule.TextView.Medium.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/delete_schedule_dialog_title" />

            <Space
                android:layout_width="0dp"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.BSUIRSchedule.TextView.Hint"
                android:gravity="center"
                android:text="@string/delete_schedule_dialog_caption" />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.BSUIRSchedule.Button"
                android:text="@string/cancel" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/agree_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Theme.BSUIRSchedule.Button.Danger"
                android:text="@string/delete" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>


